--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.9.5",
-    "@react-native-async-storage/async-storage": "^1.22.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
-    "expo": "~50.0.7",
+    "expo": "~50.0.11",
     "expo-status-bar": "~1.11.1",
     "graphql": "^15.8.0",
     "react": "18.2.0",
