--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-screens": "~3.29.0",
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
-    "react-native-svg": "14.1.0"
+    "react-native-svg": "14.1.0",
+    "expo-splash-screen": "~0.26.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
