--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^9.1.0",
     "redux-persist": "^6.0.0",
     "react-native-svg": "14.1.0",
-    "expo-splash-screen": "~0.26.4"
+    "expo-splash-screen": "~0.26.4",
+    "expo-checkbox": "~2.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
