--- a/package.json
+++ b/package.json
@@ -15,17 +15,18 @@
     "@react-navigation/native-stack": "^6.9.22",
     "@reduxjs/toolkit": "^2.2.1",
     "expo": "~50.0.11",
+    "expo-checkbox": "~2.7.0",
+    "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "graphql": "^15.8.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.73.4",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-redux": "^9.1.0",
-    "redux-persist": "^6.0.0",
     "react-native-svg": "14.1.0",
-    "expo-splash-screen": "~0.26.4",
-    "expo-checkbox": "~2.7.0"
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
